2006-09-19  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/ptp2/config.c: More typo.

	* camlibs/gsmart300/library.c (delete_file_func): Fixed typo

	* camlibs/ptp2/ptp.h (PTP_DPC_NIKON_WhiteBalanceFluorescentBias): 
	Change typo in the const name

	* camlibs/stv0680/bayer.c (light_enhance),
	camlibs/minolta/dimagev/dimagev.c,
	camlibs/konica/qm150.c (camera_manual),
	camlibs/spca50x/library.c (delete_file_func),
	camlibs/canon/usb.c (canon_usb_camera_init),
	camlibs/sierra/olympus-desc.c,
	camlibs/ptp2/ptp.c (ptp_get_property_description),
	libgphoto2/gphoto2-camera.c (gp_camera_init),
	camlibs/ptp2/library.c (camera_canon_capture): Fix typos
	https://launchpad.net/products/libgphoto/+bug/61163

2006-06-07  Hubert Figuiere  <hub@figuiere.net>

	* AUTHORS: added credits for 5D capture support.

2006-04-18  Hubert Figuiere  <hub@figuiere.net>

	* configure.in: 2.2.0trunk version

2006-03-21  Marcus Meissner  <marcus@jet.franken.de>

	* libgphoto2/gphoto2-camera.[ch]:

	  Added gp_camera_wait_for_event() API, to wait for
	  specific camera events and return them to the caller.
	  See camlibs/ptp2/library.c for an example usage.

	  Contributed by Edward Flick <eddy@cdf-imaging.com>.

2006-01-27  Theodore Kilgore  <kilgota@auburn.edu>

	* camlibs/clicksmart310/*: Supports Logitech Clicksmart 310. 
	* configure.in: camlibs/clicksmart310 hooked up.
	* AUTHORS: author of camlibs/clicksmart310 added.
	* MAINTAINERS: maintainer of camlibs/clicksmart310 added. 

2006-01-04  Hubert Figuiere  <hub@figuiere.net>

	* configure.in: bump the .so version

2005-12-26  Hubert Figuiere  <hub@figuiere.net>

	* CHANGES: updated for 2.1.99

2005-12-25  Hubert Figuiere  <hub@figuiere.net>

	* configure.in: Version 2.1.99 (pre-release)

2005-12-06  Theodore Kilgore  <kilgota@auburn.edu>

	* camlibs/digigr8/*: New camera library for 0x2770:0x905c cameras. 
	* configure.in: camlibs/digigr8 hooked up.
	* AUTHORS: author of camlibs/digigr8 added.